--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component</title>
+    <title>Component Library</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -18,6 +19,8 @@
     <div class="side">
       <h2>Content</h2>
         <div class="cover1"><a href="#">Avatar</a></div><br>
+        <div class="cover1"><a href="#">Alert</a></div><br>
+        <div class="cover1"><a href="#">Badge</a></div><br>
     </div>
 
     <div class="main">
@@ -32,9 +35,40 @@
             <img class="avatar avatar-lg" src="assets/img_avatar.png" alt=""/>
          </div>
  <!-- Avatar component ends -->
-      <hr>
       
-      
+ <hr>
+
+<!-- Alert component starts -->
+     <h2>Alert</h2>
+          <div class="alertd"><span class="closebtn">&times;</span> Danger Alert </div>
+          <div class="alerts"><span class="closebtn">&times;</span> Success Alert </div>
+          <div class="alerti"><span class="closebtn">&times;</span> Information Alert </div>
+          <div class="alertw"><span class="closebtn">&times;</span> Warning Alert </div>
+<!-- Alert component ends -->
+
+<hr>
+
+<!-- Badge component starts -->
+  <h2>Badge</h2>
+
+      <h4>Badge on Icons</h4>
+      <button class="badge-btn "> <i class="fas fa-user"></i> <span class="badge-text">1</span> </button>
+      <button class="badge-btn "> <i class="fas fa-home"></i> <span class="badge-text">2</span> </button>
+      <button class="badge-btn "> <i class="fas fa-pen"></i> <span class="badge-text">3</span> </button>
+      <button class="badge-btn "> <i class="fas fa-car"></i> <span class="badge-text">4</span> </button>
+      <h4>Badge on Avatars</h4>
+      <div class="badge">
+        <img class="avatar" src="assets/img_avatar.png" alt=""/>
+        <span class="badge-status1 badge-status"></span>
+      </div>
+      <div class="badge">
+        <img class="avatar" src="assets/img_avatar.png" alt=""/>
+        <span class="badge-status2 badge-status"></span>
+      </div>
+<!-- Badge component ends -->
+
+<hr>
+
     </div>
 
   </div>
