Added images and input component

--- a/index.html
+++ b/index.html
@@ -5,34 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <title>Component</title>
     <title>Component Library</title>
     <link rel="stylesheet" href="app.css">
-  
 </head>
 <body>
-
 <div class="header">
     <div>Component Library</div>
 </div>
-  
-  
   <div class="row">
     <div class="side">
       <h2>Content</h2>
         <div class="cover1"><a href="#">Avatar</a></div><br>
         <div class="cover1"><a href="#">Alert</a></div><br>
         <div class="cover1"><a href="#">Badge</a></div><br>
-    </div>
-
-    <div class="main">
-
+        <div class="cover1"><a href="#">Button</a></div><br>
+        <div class="cover1"><a href="#">Card</a></div><br>
+  </div>
+  <div class="main">
  <!-- Avatar component starts -->
       <h2>Avatar</h2>
          <div class="cover2">
@@ -44,36 +35,50 @@
          </div>
  <!-- Avatar component ends -->
       <hr>
-      
-
+<!-- Alert component starts -->
+     <h2>Alert</h2>
+     <div class="alertd"><span class="closebtn">&times;</span> Danger Alert </div>
+     <div class="alerts"><span class="closebtn">&times;</span> Success Alert </div>
+     <div class="alerti"><span class="closebtn">&times;</span> Information Alert </div>
+     <div class="alertw"><span class="closebtn">&times;</span> Warning Alert </div>
+<!-- Alert component ends -->
+<hr>
+<!-- Badge component starts -->
+<h2>Badge</h2>
+<h4>Badge on Icons</h4>
+<button class="badge-btn "> <i class="fas fa-user"></i> <span class="badge-text">1</span> </button>
+<button class="badge-btn "> <i class="fas fa-home"></i> <span class="badge-text">2</span> </button>
+<button class="badge-btn "> <i class="fas fa-pen"></i> <span class="badge-text">3</span> </button>
+<button class="badge-btn "> <i class="fas fa-car"></i> <span class="badge-text">4</span> </button>
+<h4>Badge on Avatars</h4>
+<div class="badge">
+  <img class="avatar" src="assets/img_avatar.png" alt=""/>
+  <span class="badge-status1 badge-status"></span>
+</div>
+<div class="badge">
+  <img class="avatar" src="assets/img_avatar.png" alt=""/>
+  <span class="badge-status2 badge-status"></span>
+</div>
+<!-- Badge component ends -->
+<hr>
 <!-- Button component starts -->
 <h2>Button</h2>
 <h4> Primary Button</h4>
 <button class="button button1">Click</button>
 <button class="button button2">Click</button>
-
-
 <h4> Link Button</h4>
 <a class="button button1" href="#" target="">Click</a>
 <a class="button button2" href="#" target="">Click</a>
-
-
 <h4>Icon Buttons</h4>
 <button class="button button1"><i class="fa fa-home"></i></button>
 <button class="button button2"><i class="fa fa-bars"></i> Menu</button>
-
-
 <h4>Floating Action Buttons</h4>
 <div class="fbutton button button1"> + </div>
 <div class="fbutton button button2"> + </div>
-
 <!-- Button component ends -->
-
 <hr/>      
-
 <!-- Card component starts -->
 <h2>Card</h2>
-
 <div class="card">
   <div class="card__description">
     <div class="badge">
@@ -83,14 +88,12 @@
   </div>
   <div class="card-tag">Badge Card</div>
 </div>
-
 <div class="card">
   <div class="card-tag2">Card with Dismiss <span class="closebtn">&times;</span></div>
   <div class="card__description">
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae sequi dolorum neque veniam quibusdam quas animi delectus eligendi ipsam similique?</p>
   </div>
-</div>
-  
+</div> 
 <div class="component">
         <div class="lg-card card">
             <div class="bg-img-wrapper">
@@ -98,51 +101,38 @@
                 <small >By Kurt Wagner</small>
             </div>
         </div>
-    
   </div>
 <!-- Card component ends -->
-
 <hr>
-
-<!-- Alert component starts -->
-     <h2>Alert</h2>
-          <div class="alertd"><span class="closebtn">&times;</span> Danger Alert </div>
-          <div class="alerts"><span class="closebtn">&times;</span> Success Alert </div>
-          <div class="alerti"><span class="closebtn">&times;</span> Information Alert </div>
-          <div class="alertw"><span class="closebtn">&times;</span> Warning Alert </div>
-<!-- Alert component ends -->
-
+<!-- Image component starts -->
+<h2>Image</h2>
+<div class="container">
+  <img class="item" src="https://source.unsplash.com/random/" alt="image1">
+  <img class="item" src="https://source.unsplash.com/random/" alt="image2">
+  <img class="item" src="https://source.unsplash.com/random/" alt="image3">
+  <img class="item" src="https://source.unsplash.com/random/" alt="image3">
+</div>
+<div class="container1">
+  <img class="item1" src="https://source.unsplash.com/random/" alt="image1">
+  <img class="item1" src="https://source.unsplash.com/random/" alt="image2">
+  <img class="item1" src="https://source.unsplash.com/random/" alt="image3">
+  <img class="item1" src="https://source.unsplash.com/random/" alt="image3">
+</div>
+<!-- Image component ends -->
 <hr>
-
-<!-- Badge component starts -->
-  <h2>Badge</h2>
-
-      <h4>Badge on Icons</h4>
-      <button class="badge-btn "> <i class="fas fa-user"></i> <span class="badge-text">1</span> </button>
-      <button class="badge-btn "> <i class="fas fa-home"></i> <span class="badge-text">2</span> </button>
-      <button class="badge-btn "> <i class="fas fa-pen"></i> <span class="badge-text">3</span> </button>
-      <button class="badge-btn "> <i class="fas fa-car"></i> <span class="badge-text">4</span> </button>
-      <h4>Badge on Avatars</h4>
-      <div class="badge">
-        <img class="avatar" src="assets/img_avatar.png" alt=""/>
-        <span class="badge-status1 badge-status"></span>
-      </div>
-      <div class="badge">
-        <img class="avatar" src="assets/img_avatar.png" alt=""/>
-        <span class="badge-status2 badge-status"></span>
-      </div>
-<!-- Badge component ends -->
-
+<!-- Input component starts -->
+<h2>Input</h2>
+<div class="wrapper">
+  <form action="">
+      <input type="text" placeholder="Email">
+      <input type="text" placeholder="Password">
+      <button class="submit-btn">Submit</button>
+  </form>
+</div>
+<!-- Input component ends -->
 <hr>
-
-    </div>
-
-  </div>
-  
-
-
-
-
+</div>
+</div>
   <footer class="footer">
 <small> Copyright &#169; 2021</small>
 </footer>
