--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
     rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <title>Component</title>
     <title>Component Library</title>
     <link rel="stylesheet" href="app.css">
 </head>
@@ -22,6 +21,10 @@
         <div class="cover1"><a href="#">Badge</a></div><br>
         <div class="cover1"><a href="#">Button</a></div><br>
         <div class="cover1"><a href="#">Card</a></div><br>
+        <div class="cover1"><a href="#">Image</a></div><br>
+        <div class="cover1"><a href="#">Input</a></div><br>
+        <div class="cover1"><a href="#">Text Utilities</a></div><br>
+        <div class="cover1"><a href="#">Lists</a></div><br>
   </div>
   <div class="main">
  <!-- Avatar component starts -->
@@ -45,6 +48,7 @@
 <hr>
 <!-- Badge component starts -->
 <h2>Badge</h2>
+<div class="cover2">
 <h4>Badge on Icons</h4>
 <button class="badge-btn "> <i class="fas fa-user"></i> <span class="badge-text">1</span> </button>
 <button class="badge-btn "> <i class="fas fa-home"></i> <span class="badge-text">2</span> </button>
@@ -59,10 +63,12 @@
   <img class="avatar" src="assets/img_avatar.png" alt=""/>
   <span class="badge-status2 badge-status"></span>
 </div>
+</div>
 <!-- Badge component ends -->
 <hr>
 <!-- Button component starts -->
 <h2>Button</h2>
+<div class="cover2">
 <h4> Primary Button</h4>
 <button class="button button1">Click</button>
 <button class="button button2">Click</button>
@@ -75,6 +81,7 @@
 <h4>Floating Action Buttons</h4>
 <div class="fbutton button button1"> + </div>
 <div class="fbutton button button2"> + </div>
+</div>
 <!-- Button component ends -->
 <hr/>      
 <!-- Card component starts -->
@@ -131,6 +138,53 @@
 </div>
 <!-- Input component ends -->
 <hr>
+<!-- Text component starts -->
+<h2>Text</h2>
+<h4>Headings</h4>
+<div class="cover2">
+  <h1>This is heading 1</h1>
+  <h2>This is heading 2</h2>
+  <h3>This is heading 3</h3>
+  <h4>This is heading 4</h4>
+  <h5>This is heading 5</h5>
+  <h6>This is heading 6</h6>
+</div>
+<h4>Small Texts</h4>
+<div class="cover2">
+<small>This is small text.</small>
+</div>
+<h4>Gray Texts</h4>
+<div class="cover2">
+<div class="gt1">Text 1</div>
+<div class="gt2">Text 2</div>
+<div class="gt3">Text 3</div>
+<div class="gt4">Text 4</div>
+</div>
+<h4>Center Texts</h4>
+<div class="cover2">
+<div class="tc">Hey Visitor</div>
+</div>
+<!-- Text component ends -->
+<hr>
+<!-- List component starts -->
+<h2>Lists</h2>
+<h4>Spaced Lists</h4>
+<div class="cover2">
+  <ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Coca Cola</li>
+  </ul>
+</div>
+  <h4>Stacked Lists</h4>
+  <div class="cover2">
+    <ul>
+      <li class="list">Coffee</li>
+      <li class="list">Tea</li>
+      <li class="list">Coca Cola</li>
+    </ul>
+  </div>
+<!-- List component ends -->
 </div>
 </div>
   <footer class="footer">
