Created Notification,modal and rating

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
     rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <title>Component</title>
     <title>Component Library</title>
     <link rel="stylesheet" href="app.css">
 </head>
@@ -130,6 +129,35 @@
   </form>
 </div>
 <!-- Input component ends -->
+<hr>
+<!-- Navigation component starts -->
+<h2>Nav bar</h2>
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+<!-- Navigation component ends -->
+<hr>
+<!-- Modal component starts -->
+<h2>Modal</h2>
+<div class="modal">
+  <div class="modal-content">
+    <span >&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+</div>
+<!-- Modal component ends -->
+<hr>
+<!-- Rating component starts -->
+<h2>Rating</h2>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+<!-- Rating component ends -->
 <hr>
 </div>
 </div>
