Created Notify and Grid Component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
         <div class="cover1"><a href="#">Badge</a></div><br>
         <div class="cover1"><a href="#">Button</a></div><br>
         <div class="cover1"><a href="#">Card</a></div><br>
+        <div class="cover1"><a href="#">Image</a></div><br>
+        <div class="cover1"><a href="#">Input</a></div><br>
+        <div class="cover1"><a href="#">Text Utilities</a></div><br>
+        <div class="cover1"><a href="#">Lists</a></div><br>
+        <div class="cover1"><a href="#">Navigation</a></div><br>
+        <div class="cover1"><a href="#">Modal</a></div><br>
+        <div class="cover1"><a href="#">Rating</a></div><br>
+        <div class="cover1"><a href="#">Notify</a></div><br>
+        <div class="cover1"><a href="#">Rating</a></div><br>
   </div>
   <div class="main">
  <!-- Avatar component starts -->
@@ -131,12 +140,33 @@
 </div>
 <!-- Input component ends -->
 <hr>
+<!-- Notify component starts -->
+<h2>Notify</h2>
+<a href="#" class="notification">
+  <span>Inbox</span>
+  <span class="badge">1</span>
+</a>
+<!-- Notify component ends -->
+<hr>
+<!-- Grid component starts -->
+<h2>Grid</h2>
+<h4>grid-2: two items in a grid</h4>
+<div class="grid-container">
+  <div class="grid-item item11">1</div>
+  <div class="grid-item item12">2</div>
+</div>
+<h4>grid-3: three items in a grid</h4>
+<div class="grid-container">
+  <div class="grid-item item21">1</div>
+  <div class="grid-item item22">2</div>
+  <div class="grid-item item23">2</div>
+</div>
+<!-- Grid component ends -->
+<hr>
 </div>
 </div>
   <footer class="footer">
 <small> Copyright &#169; 2021</small>
 </footer>
-  
-
 </body>
 </html>
