refactor: changed some minor issues

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="cover1"><a href="#">Rating</a></div><br>
         <div class="cover1"><a href="#">Notify</a></div><br>
         <div class="cover1"><a href="#">Rating</a></div><br>
+        <div class="cover1"><a href="#">Grid</a></div><br>
   </div>
   <div class="main">
  <!-- Avatar component starts -->
@@ -39,7 +40,6 @@
             <img class="avatar avatar-sm" src="assets/img_avatar.png" alt=""/>
             <img class="avatar" src="assets/img_avatar.png" alt=""/>
             <img class="avatar avatar-md" src="assets/img_avatar.png" alt=""/>
-            <img class="avatar avatar-lg" src="assets/img_avatar.png" alt=""/>
          </div>
  <!-- Avatar component ends -->
       <hr>
@@ -118,17 +118,15 @@
 <hr>
 <!-- Image component starts -->
 <h2>Image</h2>
+<h4>Responsive Image</h4>
 <div class="container">
   <img class="item" src="https://source.unsplash.com/random/" alt="image1">
   <img class="item" src="https://source.unsplash.com/random/" alt="image2">
-  <img class="item" src="https://source.unsplash.com/random/" alt="image3">
-  <img class="item" src="https://source.unsplash.com/random/" alt="image3">
 </div>
+<h4>Rounded Image</h4>
 <div class="container1">
   <img class="item1" src="https://source.unsplash.com/random/" alt="image1">
   <img class="item1" src="https://source.unsplash.com/random/" alt="image2">
-  <img class="item1" src="https://source.unsplash.com/random/" alt="image3">
-  <img class="item1" src="https://source.unsplash.com/random/" alt="image3">
 </div>
 <!-- Image component ends -->
 <hr>
@@ -162,18 +160,18 @@
 <div class="grid-container">
   <div class="grid-item item21">1</div>
   <div class="grid-item item22">2</div>
-  <div class="grid-item item23">2</div>
+  <div class="grid-item item23">3</div>
 </div>
 <!-- Grid component ends -->
 <hr>
 <!-- Navigation component starts -->
 <h2>Nav bar</h2>
-<ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
+<ul class="ull">
+  <li class="lii"><a class="active" href="#home">Home</a></li>
+  <li class="lii"><a href="#news">News</a></li>
+  <li class="lii"><a href="#contact">Contact</a></li>
+  <li class="lii"><a href="#about">About</a></li>
+</ul class="ull">
 <!-- Navigation component ends -->
 <hr>
 <!-- Modal component starts -->
@@ -226,13 +224,11 @@
 <!-- List component starts -->
 <h2>Lists</h2>
 <h4>Spaced Lists</h4>
-<div class="cover2">
   <ul>
     <li>Coffee</li>
     <li>Tea</li>
     <li>Coca Cola</li>
   </ul>
-</div>
   <h4>Stacked Lists</h4>
   <div class="cover2">
     <ul>
